<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.master.sociallogins.MainActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/facebookLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/facebook_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/googlePlus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/google_plus_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/linkedInLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/linked_in_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/twitterLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/twitter_login"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/trueCallerLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/trucaller_login"
        android:textColor="@android:color/white" />

</LinearLayout>
